Integrations: Make selected filter text readable. Fixes #327

--- a/github-dark.css
+++ b/github-dark.css
@@ -1458,7 +1458,7 @@
   .dangerzone > h3, .gcr-ext-editor-close .select-menu-title,
   .btn.btn-outline:hover, .btn.btn-outline:active, .btn.btn-outline.selected,
   .btn.btn-outline.zeroclipboard-is-hover, .btn.btn-outline.zeroclipboard-is-active,
-  .home-hero-signup .text-white {
+  .home-hero-signup .text-white, a.filter-item.selected {
     color: #fff !important;
   }
   .btn, a.btn, .btn.btn-primary, .button.primary,
